--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <option value="designer">Designer</option>          
           <option value="student">Student</option>
           <option value="other">Other</option>  
-          <input type="text" name="job_role_other" placeholder="Your Job Role" id="other-title">
+          <input id="other-title" name="job_role_other" placeholder="Your Job Role" type="text"> 
         </select>           
       </fieldset>
       
@@ -171,7 +171,7 @@
     </form>
 
   </div>
-  <script src="js/jquery.js"></script>
-  <script src='js/script.js'></script>
+  <script src="js/jQueryv341.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
